@@ -106,6 +106,11 @@ This option is only required in conjunction with "-L, --dump". If this option is
 .TP
 .BI "-t, --timeout " "TIMEOUT"
 Specify the timeout.
+.BI "-m, --mark " "MARK"
+Specify the conntrack mark.
+.TP
+.BI "-c, --secmark " "SECMARK"
+Specify the conntrack selinux security mark.
 .TP
 .BI "-u, --status " "[ASSURED|SEEN_REPLY|UNSET][,...]"
 Specify the conntrack status.
