@@ -127,7 +127,10 @@ enum options {
 	CT_OPT_OUTPUT_BIT	= 19,
 	CT_OPT_OUTPUT		= (1 << CT_OPT_OUTPUT_BIT),
 
-	CT_OPT_MAX		= CT_OPT_OUTPUT_BIT
+	CT_OPT_SECMARK_BIT	= 20,
+	CT_OPT_SECMARK		= (1 << CT_OPT_SECMARK_BIT),
+	
+	CT_OPT_MAX		= CT_OPT_SECMARK_BIT
 };
 #define NUMBER_OF_OPT	CT_OPT_MAX+1
 
